--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Imports of needed libraries.\n",
+    "# Import the required libraries.\n",
     "\n",
-    "- Pandas is the library used for managing datasets\n",
-    "- Numpy is used for numerical operations\n",
-    "- MatPlotLib is basically the one that is used for plotting"
+    "- Pandas is used for loading datasets\n",
+    "- Numpy is a library designed to provide fast, optimized numerical operations in Python\n",
+    "- MatPlotLib adds a nice façade for plotting."
    ],
    "metadata": {
     "collapsed": false
@@ -33,10 +33,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# First step is to load our dataset\n",
+    "# First step is to load the dataset\n",
     "\n",
-    "I made total of three dataset to demonstrate perceptron and it's capabilities.\n",
-    "```AND_GATE.csv``` and ```OR_GATE.csv``` both contain normal linear data, while ```XOR_GATE.csv``` is used to demonstrate the XOR gate problem, and the behavior of the single-layer perceptron with data that cannot be linear separated."
+    "I've made total of three dataset to demonstrate Rosenblatt's perceptron and it's capabilities.\n",
+    "```AND_GATE.csv``` and ```OR_GATE.csv``` both contain standard linear data, while ```XOR_GATE.csv``` is used to demonstrate the XOR gate problem, and the behavior of the single-layer (linear) perceptron with non-standard data that cannot be classified a linear way."
    ],
    "metadata": {
     "collapsed": false
@@ -60,12 +60,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Next things we need to do is to define variables that we will need\n",
+    "# Next step is variable definition\n",
     "\n",
-    "- Learning rate, e.g. the total \"change\" made while learning. The usage of it is described [here](https://en.wikipedia.org/wiki/Delta_rule)\n",
-    "- Weights, the importance of specified input\n",
-    "- Bias, the error that is injected into the sum. You can find nice graph explaining it [here](https://www.researchgate.net/publication/327392288/figure/fig1/AS:666616886984704@1535945259693/The-graph-of-a-perceptron-x1-xm-are-input-signals-w1-wm-are-the-weights.png)\n",
-    "- Epochs, the maximum number of training iterations"
+    "- Learning rate, e.g. the adjustment made while learning. More details can be found [here](https://en.wikipedia.org/wiki/Delta_rule)\n",
+    "- Weights, the relative importance that is assigned into a specified input\n",
+    "- Bias, the const. value that is injected into the sum, to help prevent errors. More details (including a nice chart) can be found [here](https://www.researchgate.net/publication/327392288/figure/fig1/AS:666616886984704@1535945259693/The-graph-of-a-perceptron-x1-xm-are-input-signals-w1-wm-are-the-weights.png)\n",
+    "- Epochs, the number of time the training process will be run (iteration count)"
    ],
    "metadata": {
     "collapsed": false
@@ -92,9 +92,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Here we define the activation function used for learning.\n",
+    "# Here we define the activation function that we will use for learning.\n",
     "\n",
-    "I decided to use standard Heaviside step, but there are many different functions that were added bellow."
+    "I've decided to use a standard Heaviside step, but you can try other functions, that have been commented."
    ],
    "metadata": {
     "collapsed": false
@@ -108,8 +108,8 @@
     "def activation(val):\n",
     "    return 1 if val >= 0 else 0 # Heaviside\n",
     "#   return val # Linear\n",
-    "#   return max(0, val) # RelU\n",
     "#   return 1 / (1 + np.exp(-val)) # Sigmoid\n",
+    "#   return max(0, val) # RelU\n",
     "#   return val if val >= 0 else 0.01 * val # Leaky RelU"
    ],
    "metadata": {
@@ -123,9 +123,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# There is our core of perceptron learning.\n",
+    "# Now, we need to add the core code for the learning algorithm.\n",
     "\n",
-    "You can get good information on how it works [on the Toronto University ML Lecture no. 3](https://www.cs.toronto.edu/~hinton/coursera/lecture3/lec3.pdf)"
+    "You can find a valuable information on how it works [on the Toronto University ML Lecture no. 3](https://www.cs.toronto.edu/~hinton/coursera/lecture3/lec3.pdf)"
    ],
    "metadata": {
     "collapsed": false
@@ -270,9 +270,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Here is the plotting algorithm\n",
+    "# After this, we plot the output\n",
     "\n",
-    "We take first input as x-axis, and the second as the y-axis."
+    "Now, let's take first input as x-axis, and the second as the y-axis."
    ],
    "metadata": {
     "collapsed": false
